Switch the issue list to wrap instead of scroll which is much less ugly

--- a/content/static/content/css/issue_list.css
+++ b/content/static/content/css/issue_list.css
@@ -1,7 +1,7 @@
 .issue-list {
     display: flex;
 
-    overflow-x: scroll;
+    flex-wrap: wrap;
 
     padding: 1em;
 }
